# Language-Plugin

./: CMakeLists.txt  a.json  build.gradle  config.json  diff.txt  gradle.properties  notification.json  notification_config.json  progress_config.json  settings.gradle
.circleci/: config.yml
.github/workflows/: Aapt2.yml  Build_Apk.yml  Ndk.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/tmp1272/languege_vi/: Main.java
app/src/main/res/values/: strings.xml
app/src/main/vi/: AndroidManifest.xml
app/src/vi/java/com/tmp1272/language_vi/: Main.java
app/src/vi/res/drawable/: token_24px.xml
app/src/vi/res/values/: attrs.xml  color.xml  strings.xml
